modified:   Deutschland.ipynb

--- a/Deutschland.ipynb
+++ b/Deutschland.ipynb
@@ -48,6 +48,7 @@
     "# And also saves it to the github (also cloned or forked versions)\n",
     "# Skript for italy I will also provide but I have to copy it out. \n",
     "\n",
+    "import geopandas as gpd\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from datetime import datetime\n",
@@ -85,7 +86,8 @@
     "\n",
     "\n",
     "\n",
-    "data_laender.info()"
+    "data_laender.info()\n",
+    "\n"
    ]
   },
   {
